webroot/common/ui/css/contrail.chart.css
/* ... */
.coCharts-container .axis.x-axis .domain {
    display: none
}

.coCharts-container .axis.x-axis .tick text {
    font-size: 11px;
    fill: #666
}

.coCharts-container .axis.x-axis .axis-label {
    font-size: 11px;
    fill: #666
}

.coCharts-container .axis.y-axis .domain {
    display: none
}

.coCharts-container .axis.y-axis .tick text {
    font-size: 11px;
    fill: #666
}

.coCharts-container .axis.y-axis .axis-label {
    font-size: 11px;
    fill: #666
}

.coCharts-container .bubble {
    fill: #6baed6;
    stroke-width: 1;
    stroke: #a7cfe7;
    opacity: 0.75
}

.coCharts-container .bubble.active {
    stroke: #358cbf;
    cursor: pointer
}
/* Line chart is a child view so it does not have it's own axis now.
.line-chart .axis.x-axis .domain {
    display: none
}

.line-chart .axis.x-axis .tick line {
    stroke: #ddd;
    stroke-width: 1
}

.line-chart .axis.x-axis .tick text {
    font-size: 11px;
    fill: #666
}

.line-chart .axis.y-axis .domain {
    display: none
}

.line-chart .axis.y-axis .tick line {
    stroke: #ddd;
    stroke-width: 1
}

.line-chart .axis.y-axis .tick text {
    font-size: 11px;
    fill: #666
}
*/
.line-chart .line {
    fill: none;
    stroke-width: 2
}

.bar-chart .bar {
    fill-opacity: .75;
    shape-rendering: crispEdges;
}

.bar-chart .bar.active {
    fill-opacity: 1;
}

.navigation-view .page-links {
    height: 33px
}

.navigation-view div.prev {
    float: left;
    text-align: left
}

.navigation-view div.next {
    float: right;
    text-align: right
}

.tooltip-view {  }

